Consolidated Model API and added exception support. Need to coordinate with controller to pass on exceptions. Looking into a genereic simultaneous operation to setPosition, etc.

--- a/src/main/resources/Model/DefaultParameters.properties
+++ b/src/main/resources/Model/DefaultParameters.properties
@@ -1,4 +1,4 @@
-AvatarX=0.0
-AvatarY=0.0
-AvatarRotation=0.0
-AvatarPenColor=black
+AvatarX=Double,0.0
+AvatarY=Double,0.0
+AvatarRotation=Double,0.0
+AvatarPenColor=String,black
