Renamed DefaultParameters to Avatar to more accurately reflect functionality

--- a/src/main/resources/Model/Exceptions.properties
+++ b/src/main/resources/Model/Exceptions.properties
@@ -1,5 +1,5 @@
 StartOpNotCalled=Workspace tracking has not begun because startOp() was not called.
 EndOpNotCalled=Data is outdated because the previous operation was not closed. Please end each operation by calling the endOp() method.
 ReadStringAsDouble=Tried to read a non-number variable as a number
-DefaultTypeReassignment=Tried to set default variable "%s" to be a different type
-ConfigurationParseDoubleError=On setup, %s was declared as a double but given a non-number default value
+DefaultTypeReassignment=Tried to set Avatar default variable "%s" to be a different type
+ConfigurationParseDoubleError=On Avatar setup, %s was declared as a double but given a non-number default value
