--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <version>jdk-12.0.1+2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>19</version>
+        </dependency>
     </dependencies>
 
     <build>
