--- a/src/main/resources/Model/Exceptions.properties
+++ b/src/main/resources/Model/Exceptions.properties
@@ -1,5 +1,6 @@
-StartOpNotCalled=Workspace tracking has not begun because startOp() was not called.
-EndOpNotCalled=Data is outdated because the previous operation was not closed. Please end each operation by calling the endOp() method.
-ReadStringAsDouble=Tried to read a non-number variable as a number
-DefaultTypeReassignment=Tried to set Avatar default variable "%s" to be a different type
-ConfigurationParseDoubleError=On Avatar setup, %s was declared as a double but given a non-number default value
+StartOpNotCalledError=Workspace tracking has not begun because startOp() was not called.
+EndOpNotCalledError=Data is outdated because the previous operation was not closed. Please end each operation by calling the endOp() method.
+ConfigurationParsingError=On Avatar setup, %s was declared one type but given an incompatible default value.
+UnsupportedDefaultTypeError=On Avatar setup, an unsupported type was given. Only String, Double, and Boolean are supported. Please check spelling and retry.
+UnknownAvatarParameterError=Model attempted to set an unknown attribute in an avatar.
+NonexistentAvatarError=Attempted to set avatar ID to a nonexistent avatar.
