Rotation, PenUp, PenDown

--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -1,4 +1,4 @@
-math.Add = add
+math.Add = add|sum
 math.Random = random|rand
 
 avatar.Back = bk|back
@@ -6,4 +6,5 @@ avatar.Forward = fd|forward
 avatar.Home = home
 avatar.PenDown = pd|pendown
 avatar.PenUp = pu|penup
-
+avatar.RotateLeft = lt|left
+avatar.RotateRight = rt|right
