--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -8,3 +8,4 @@ avatar.PenDown = pd|pendown
 avatar.PenUp = pu|penup
 avatar.RotateLeft = lt|left
 avatar.RotateRight = rt|right
+avatar.Goto = goto|setxy
