--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,78 @@
-image: maven
+image: dukedesigncoach/testfx-runner:bellsoftjdk17
 
 stages:
-  - analyze
   - validate
+  - analyze
+  - test
+  - report
 
 checkstyle_analysis:
   stage: validate
-  script: mvn validate
+  script:
+   - mvn validate
+  artifacts:
+    reports:
+      codequality: target/checkstyle-result.xml
+
 
 sonar_analysis:
   stage: analyze
   script:
-    - java -version
-    - mvn -version
     - |
-      mvn -X sonar:sonar \
-      -Dsonar.host.url=http://coursework.cs.duke.edu:9000 \
-      -Dsonar.sources=src \
-      -Dsonar.java.binaries=. \
-      -Dsonar.exclusions=**/*.xml,**/*.txt,**/*.css,**/test/**
+      mvn -X -ntp sonar:sonar \
+        -Dsonar.host.url=http://coursework.cs.duke.edu:9000 \
+        -Dsonar.java.binaries=. \
+        -Dsonar.exclusions=**/*.xml,**/*.css,**/test/**
   tags:
     - sonarqube
+  only:
+    - master
+
+
+unit_testing:
+  stage: test
+  coverage: '/Total.*?([0-9]{1,3})%/'
+  script:
+    - |
+      mvn -X -ntp test \
+        -Djava.awt.headless=true \
+        -Dtestfx.headless=true \
+        -Dtestfx.robot=glass \
+        -Dembedded=monocle \
+        -Dglass.platform=Monocle \
+        -Dprism.order=sw \
+        -Dprism.fontdir=/usr/share/fonts \
+        -Dtestfx.setup.timeout=6000 \
+        -Dheadless.geometry=1600x1200
+    - cat target/site/jacoco/index.html
+  allow_failure: true
+  artifacts:
+    reports:
+      junit: target/surefire-reports/TEST-*.xml
+    paths:
+      - target
+
+
+docs:
+  stage: report
+  script:
+    - mvn javadoc:javadoc
+    - mvn site
+  artifacts:
+    paths:
+      - target/site
+  only:
+    - master
+
+
+pages:
+  stage: report
+  needs:
+    - docs
+  script:
+    - mv target/site public
+  artifacts:
+    paths:
+      - public
   only:
     - master
