--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <!-- set up name for repeated values to make it easy to change -->
     <properties>
         <project.build.java.version>17</project.build.java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
