--- a/src/main/resources/Model/KeyCodes.properties
+++ b/src/main/resources/Model/KeyCodes.properties
@@ -4,5 +4,7 @@ Position=AvatarPosition
 Rotation=AvatarRotation
 PenColor=AvatarPenColor
 IsPenDown=AvatarIsPenDown
+Visible=AvatarVisible
 History=History
 ReturnValues=ReturnValues
+ClearScreen=ClearScreen
