--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -9,3 +9,4 @@ avatar.PenUp = pu|penup
 avatar.RotateLeft = lt|left
 avatar.RotateRight = rt|right
 avatar.Goto = goto|setxy
+avatar.SetHeading = setheading|seth
