--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -10,3 +10,19 @@ avatar.RotateLeft = lt|left
 avatar.RotateRight = rt|right
 avatar.Goto = goto|setxy
 avatar.SetHeading = setheading|seth
+avatar.Towards = towards
+avatar.ShowTurtle = showturtle|st
+avatar.HideTurtle = hideturtle|ht
+
+logical.Less = less?|<
+logical.LessEqual = lessequal?|<=
+logical.Greater = greater?|>
+logical.GreaterEqual = greaterequal?|>=
+logical.Equal = equal?|==
+logical.NotEqual = notequal?|!=
+logical.And = and
+logical.Or = or
+logical.Not = not
+
+
+
