--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -1,6 +1,3 @@
-math.Add = add|sum
-math.Random = random|rand
-
 avatar.Back = bk|back
 avatar.Forward = fd|forward
 avatar.Home = home
@@ -24,5 +21,21 @@ logical.And = and
 logical.Or = or
 logical.Not = not
 
+math.Add = sum|+
+math.Difference = difference|-
+math.Product = product|*
+math.Quotient = quotient|/
+math.Remainder = remainder|%
+math.Negation = minus|~
+math.Random = random|rand
+math.RandomRange = randomrange|randr
+math.Sine = sin|sine
+math.Cosine = cos|cosine
+math.Tangent = tan|tangent
+math.Arctan = atan|arctangent
+math.SquareRoot = squareroot|sqrt
+math.Log = log
+math.Power = power|pow
+math.Pi = pi
 
 
