--- a/src/main/resources/Parser/TokenPatterns.properties
+++ b/src/main/resources/Parser/TokenPatterns.properties
@@ -2,4 +2,4 @@ CONSTANT = -?[0-9]+\\.?[0-9]*
 VARIABLE = :[a-zA-Z]+
 GROUP_START = \\[
 GROUP_END = \\]
-POSSIBLY_COMMAND = [a-zA-Z_]+(\\?)?
+# POSSIBLY_COMMAND = [a-zA-Z_]+(\\?)?
