--- a/src/main/resources/Model/DefaultParameters.properties
+++ b/src/main/resources/Model/DefaultParameters.properties
@@ -4,3 +4,4 @@ AvatarRotation=Double,0.0
 AvatarPenColor=String,black
 AvatarIsPenDown=Boolean,true
 AvatarVisible=Boolean, true
+Default=Double,0.0
