Added model support for set visibility and clear screen, added randomness...

--- a/src/main/resources/Model/KeyCodes.properties
+++ b/src/main/resources/Model/KeyCodes.properties
@@ -4,5 +4,8 @@ Position=AvatarPosition
 Rotation=AvatarRotation
 PenColor=AvatarPenColor
 IsPenDown=AvatarIsPenDown
+Visible=AvatarVisible
 History=History
 ReturnValues=ReturnValues
+ClearScreen=ClearScreen
+UserLibrary=UserLibrary
