--- a/src/main/resources/Model/DefaultParameters.properties
+++ b/src/main/resources/Model/DefaultParameters.properties
@@ -3,3 +3,5 @@ AvatarY=Double,0.0
 AvatarRotation=Double,0.0
 AvatarPenColor=String,black
 AvatarIsPenDown=Boolean,true
+AvatarVisible=Boolean, true
+Default=Double,0.0
