Added PopUp and basic exampels of PopUp

--- a/src/main/resources/View/SliderBoxParams.properties
+++ b/src/main/resources/View/SliderBoxParams.properties
@@ -4,3 +4,5 @@ Increment = 5
 Default = 60
 ShowLabels = true
 ShowTicks = true
+ErrorMessage = Invalid Input, must be a number
+ErrorRange = Input must be from 1-100
