CHECKPOINT FOR COMING BACK LATER

--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -38,4 +38,10 @@ math.Log = log
 math.Power = power|pow
 math.Pi = pi
 
+control.DoTimes = dotimes
+control.For = for
+control.If = if
+control.IfElse = ifelse
+control.SetVariable = set|make
+
 
