--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -44,4 +44,8 @@ control.If = if
 control.IfElse = ifelse
 control.SetVariable = set|make
 
-
+queries.Heading = heading
+queries.XCor = xcor
+queries.YCor = ycor
+queries.PenDownQuery = pendownp|pendown?
+queries.ShowinQueryCommand = showingp|showing?
