fixed properties bug

--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -48,4 +48,4 @@ queries.Heading = heading
 queries.XCor = xcor
 queries.YCor = ycor
 queries.PenDownQuery = pendownp|pendown?
-queries.ShowinQueryCommand = showingp|showing?
+queries.ShowingQuery = showingp|showing?
