--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -12,6 +12,7 @@ avatar.SetHeading = setheading|seth
 avatar.Towards = towards
 avatar.ShowTurtle = showturtle|st
 avatar.HideTurtle = hideturtle|ht
+avatar.SetPenColor = setpencolor|setcolor
 
 logical.Less = less?|<
 logical.LessEqual = lessequal?|<=
@@ -51,3 +52,4 @@ queries.XCor = xcor
 queries.YCor = ycor
 queries.PenDownQuery = pendownp|pendown?
 queries.ShowingQuery = showingp|showing?
+
