--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -46,6 +46,7 @@ control.For = for
 control.If = if
 control.IfElse = ifelse
 control.SetVariable = set|make
+control.Repeat = repeat
 
 queries.Heading = heading
 queries.XCor = xcor
