--- a/src/main/resources/Model/Exceptions.properties
+++ b/src/main/resources/Model/Exceptions.properties
@@ -4,3 +4,4 @@ ConfigurationParsingError=On Avatar setup, %s was declared one type but given an
 UnsupportedDefaultTypeError=On Avatar setup, an unsupported type was given. Only String, Double, and Boolean are supported. Please check spelling and retry.
 UnknownAvatarParameterError=Model attempted to set an unknown attribute in an avatar.
 NonexistentAvatarError=Attempted to set avatar ID to a nonexistent avatar.
+OverlappingIDError=There is already an avatar with this ID.
