Added ID support in the View Payload and commands, waiting to enable changes because View needs to implement changes

--- a/src/main/resources/Model/DefaultParameters.properties
+++ b/src/main/resources/Model/DefaultParameters.properties
@@ -4,4 +4,5 @@ AvatarRotation=Double,0.0
 AvatarPenColor=String,0 0 0
 AvatarIsPenDown=Boolean,true
 AvatarVisible=Boolean, true
-Default=Double,0.0
+NumericDefault=Double,0.0
+BooleanDefault=Boolean,true
