--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -10,9 +10,11 @@ avatar.RotateRight = rt|right
 avatar.Goto = goto|setxy
 avatar.SetHeading = setheading|seth
 avatar.Towards = towards
-avatar.ShowTurtle = showturtle|st
-avatar.HideTurtle = hideturtle|ht
-avatar.SetPenColor = setpencolor|setcolor
+
+
+display.ShowTurtle = showturtle|st
+display.HideTurtle = hideturtle|ht
+display.SetPenColor = setpencolor|setcolor
 
 logical.Less = less?|<
 logical.LessEqual = lessequal?|<=
