--- a/src/main/resources/Parser/TokenPatterns.properties
+++ b/src/main/resources/Parser/TokenPatterns.properties
@@ -2,4 +2,6 @@ CONSTANT = -?[0-9]+\\.?[0-9]*
 VARIABLE = :[a-zA-Z]+[a-zA-Z0-9]*
 GROUP_START = \\[
 GROUP_END = \\]
+REPEATER_GROUP_BEGIN = \\(
+REPEATER_GROUP_END = \\)
 # POSSIBLY_COMMAND = [a-zA-Z_]+(\\?)?
