Refactored workspace to be a separate class, modified privacy

--- a/src/main/resources/Model/AvatarExceptions.properties
+++ b/src/main/resources/Model/AvatarExceptions.properties
@@ -3,3 +3,4 @@ UnsupportedDefaultTypeError=On Avatar setup, an unsupported type was given. Only
 UnknownAvatarParameterError=Model attempted to set an unknown attribute in an avatar.
 NonexistentAvatarError=Attempted to set avatar ID to a nonexistent avatar.
 OverlappingIDError=There is already an avatar with this ID.
+NonexistentAvatarToRemove=Program tried to remove an avatar with an ID that does not exist.
