--- a/src/main/resources/Model/ModelExceptions.properties
+++ b/src/main/resources/Model/ModelExceptions.properties
@@ -1,2 +1,3 @@
 StartOpNotCalledError=Workspace tracking has not begun because startOp() was not called.
 EndOpNotCalledError=Data is outdated because the previous operation was not closed. Please end each operation by calling the endOp() method.
+NonexistentUserVariable=The given user variable name has not been assigned a value.
