added day and night options

--- a/src/main/resources/View/PanelActions.properties
+++ b/src/main/resources/View/PanelActions.properties
@@ -1,4 +1,5 @@
 NavigationPanel=GoCommand
 GameScreenNavigationPanel=Run,Clear,Step,Pause,Reset,Upload
 DropDownPanel=Commands,Library,Help
+ColorSchemesPanel=Day,Night
 
