--- a/src/main/resources/View/SplashScreenLayout.properties
+++ b/src/main/resources/View/SplashScreenLayout.properties
@@ -1,4 +1,4 @@
-Title = 0,1
-CommandBox = 0,2
-ButtonPanel = 0,1
-HistoryView = 1,0
+Title = 3,5
+goCommand = 3,8
+colorPicker = 3,6
+languagePicker = 3,7
