--- a/src/main/resources/Parser/Commands/English.properties
+++ b/src/main/resources/Parser/Commands/English.properties
@@ -11,7 +11,14 @@ avatar.Goto = goto|setxy
 avatar.SetHeading = setheading|seth
 avatar.Towards = towards
 
+control.DoTimes = dotimes
+control.For = for
+control.If = if
+control.IfElse = ifelse
+control.SetVariable = set|make
+control.Repeat = repeat
 
+display.ClearScreen = clearscreen|cs
 display.ShowTurtle = showturtle|st
 display.HideTurtle = hideturtle|ht
 display.SetPenColor = setpencolor|setcolor
@@ -43,16 +50,15 @@ math.Log = log
 math.Power = power|pow
 math.Pi = pi
 
-control.DoTimes = dotimes
-control.For = for
-control.If = if
-control.IfElse = ifelse
-control.SetVariable = set|make
-control.Repeat = repeat
+multiple.Ask = ask
+multiple.AskWith = askwith
+multiple.Tell = tell
 
 queries.Heading = heading
 queries.XCor = xcor
 queries.YCor = ycor
 queries.PenDownQuery = pendownp|pendown?
 queries.ShowingQuery = showingp|showing?
+queries.Id = id
+queries.NumAvatarQuery = turtles
 
