--- a/src/main/resources/View/PanelActions.properties
+++ b/src/main/resources/View/PanelActions.properties
@@ -1,5 +1,5 @@
 NavigationPanel=GoCommand
-GameScreenNavigationPanel=Run,Clear,Step,Pause,Reset,Upload,Help
+GameScreenNavigationPanel=Run,Clear,Step,Pause,Reset,Upload,Help,New...
 DropDownPanel=Commands,Library,Help
 ColorSchemesPanel=Day,Night
 
